fixed margin and alignment of results

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -74,6 +74,7 @@
 }
 
 .main .result img{
+  margin-top: 16px;
   float: right;
   width: 500px;
 }
